k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gearup-prod
  labels:
    app.kubernetes.io/part-of: gearup
