k8s/prod/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gearup-api
  namespace: gearup-prod
spec:
  type: ClusterIP
  selector:
    app: gearup-api
  ports:
    - port: 80
      targetPort: 8080
      name: http
